@@ -9,19 +9,19 @@ Maintainer: Michel Lang <michellang@gmail.com>
 URL: http://batchjobs.googlecode.com
 License: BSD
 Depends: BatchJobs
-Imports: BBmisc, RSQLite, plyr
+Imports: BBmisc, DBI, RSQLite, plyr
 Suggests: randomForest, rpart, testthat
 LazyData: yes
 ByteCompile: yes
-Version: 1.0-607
-Collate: 'addExperiments.R' 'Algorithm.R' 'applyJobFunction.R'
-        'database.R' 'designs.R' 'Experiment.R' 'ExperimentRegistry.R'
-        'filenames.R' 'findExperiments.R' 'generateProblemInstance.R'
-        'getAlgorithm.R' 'getAlgorithmIds.R' 'getIndex.R' 'getJob.R'
-        'getProblem.R' 'getProblemIds.R' 'Problem.R'
-        'reduceResultsExperiments.R' 'removeAlgorithm.R'
-        'removeExperiments.R' 'removeProblem.R' 'setJobFunction.R'
-        'summarizeExperiments.R' 'testJob.R' 'zzz.R'
-Packaged: 2012-07-04 15:33:01 UTC; bischl
+Version: 1.0-621
+Collate: 'Algorithm.R' 'Experiment.R' 'ExperimentRegistry.R'
+        'Problem.R' 'addExperiments.R' 'applyJobFunction.R'
+        'database.R' 'designs.R' 'filenames.R' 'findExperiments.R'
+        'generateProblemInstance.R' 'getAlgorithm.R'
+        'getAlgorithmIds.R' 'getIndex.R' 'getJob.R' 'getProblem.R'
+        'getProblemIds.R' 'reduceResultsExperiments.R'
+        'removeAlgorithm.R' 'removeExperiments.R' 'removeProblem.R'
+        'setJobFunction.R' 'summarizeExperiments.R' 'testJob.R' 'zzz.R'
+Packaged: 2012-07-05 17:05:14 UTC; lang
 Repository: CRAN
-Date/Publication: 2012-07-04 16:22:15
+Date/Publication: 2012-07-06 09:00:11
