@@ -1,6 +1,6 @@
-c690f1e6f21d3b9894de526e7d3d5433 *DESCRIPTION
-2d3d23c4a98d0745c75be7b8b58a60fb *NAMESPACE
-48faeb2b536b1c8ad9c7da1608d0b3f9 *NEWS
+6d4b31a3a7b9fb9eb38b56c44cf3419b *DESCRIPTION
+a57c55f9e0bd362d0f5e3400de685aa5 *NAMESPACE
+65e3c01866f2a90a6c1f63dd5645a0ea *NEWS
 f6f2c73b1e3a799acadcbc4359b142f4 *R/Algorithm.R
 a7b48494dabea6ed143bb7be505be4bd *R/Experiment.R
 ef79c868da4d2097e52872ff78800dab *R/ExperimentRegistry.R
@@ -25,22 +25,8 @@ f7afb3c886aae166da0abce403cd1bca *R/removeProblem.R
 62540c1cf2b4b5a28d3141d4f8d05b86 *R/setJobFunction.R
 f59c214b0f088fe01407be1e113e733f *R/summarizeExperiments.R
 8d0d174b8fdae35a7175bc15a2c4b426 *R/testJob.R
-c669fee86107fb99c054af01b1cb2e9c *R/zzz.R
+136459480ed9a65364b7ee9372e837c6 *R/zzz.R
 fea13642309ea4423bacd55398b6f474 *inst/tests/helpers.R
-10480ebd21a06162f10438fed31c964a *inst/tests/runit_files/BatchJobs.db
-697733304ea40de645a80594707f4dda *inst/tests/runit_files/algorithms/a1.RData
-64f92a00c9a6af9b10a4cc7429479660 *inst/tests/runit_files/algorithms/a2.RData
-98e969bcaff81a9284b36fdd5212813f *inst/tests/runit_files/conf.RData
-219acc8e61d8e9acb46cc460e379e561 *inst/tests/runit_files/jobs/01/1-result.RData
-bcea8cd2ff11f0ebeb56ea373fa016f4 *inst/tests/runit_files/jobs/01/1.R
-08afdd6b9c8eb8bf4b00c52184bd83fc *inst/tests/runit_files/jobs/02/2-result.RData
-ca516c957a1af0689ed7fab63a2c3fd9 *inst/tests/runit_files/jobs/02/2.R
-59cb1ebc0e1bded679f106ee818fe874 *inst/tests/runit_files/jobs/03/3-result.RData
-0f985ee5b2926b19418dbbd8969341e0 *inst/tests/runit_files/jobs/03/3.R
-9ad460309b25b16a44c33128ac2a06b3 *inst/tests/runit_files/problems/p1_dynamic.RData
-f4b4877d0abb3be836c5c555dacf4c99 *inst/tests/runit_files/problems/p1_static.RData
-104ed4daa9a71753e0866e1f5b431245 *inst/tests/runit_files/registry.RData
-d58158360bb05981b018963b0a1c3fc9 *inst/tests/runit_files/resources/resources_1341268752.RData
 914bd4b3dcf803b76ee098145682a726 *inst/tests/test_addExperiments.R
 b8280750e9132752118cab0b7d56dec9 *inst/tests/test_designs.R
 ecbf600974b23af462576f13c1769803 *inst/tests/test_findExperiments.R
@@ -52,9 +38,9 @@ eab79670319a61aa5ca94de73f363879 *inst/tests/test_reduceResults.R
 57e27bbf17586265ffbab9cb9504ee02 *inst/tests/test_summarizeExperiments.R
 da8cec4c2ff1427d6cc30a3261432a11 *inst/tests/test_testJob.R
 e41fdfdc616fc1f4d9e3e76ad3846582 *inst/tests/test_trafo_results.R
-ada0cf8a96239a5e2c21327043e6c76c *man/addAlgorithm.Rd
-b04fe73e2e365bfc65398ec27849cce7 *man/addExperiments.Rd
-0ca75cffe7c5d56d52fccd8e9e5e2404 *man/addProblem.Rd
+6023bd26555ef23b9a9b5b80b126012e *man/addAlgorithm.Rd
+02b42b1657e6211d93b94bf61f68ab6e *man/addExperiments.Rd
+baf6f3870e89fdaab7c57a107bcf1b84 *man/addProblem.Rd
 43975891c802490ef5ae83b1bcac4cbe *man/findExperiments.Rd
 0df9889c2a52cfadb39f8dfe506d3081 *man/generateProblemInstance.Rd
 849a8f9361c55efa707a777f9963bd2e *man/getAlgorithm.Rd
