@@ -1,3 +1,15 @@
+S3method(addExperiments,ExperimentRegistry)
+S3method(applyJobFunction,ExperimentRegistry)
+S3method(copyRequiredJobFiles,ExperimentRegistry)
+S3method(dbCreateJobDefTable,ExperimentRegistry)
+S3method(dbGetJobs,ExperimentRegistry)
+S3method(getJobs,ExperimentRegistry)
+S3method(print,Algorithm)
+S3method(print,Design)
+S3method(print,ExperimentJob)
+S3method(print,ExperimentRegistry)
+S3method(print,Problem)
+S3method(setJobFunction,ExperimentRegistry)
 export(addAlgorithm)
 export(addExperiments)
 export(addProblem)
@@ -16,19 +28,8 @@ export(removeAlgorithm)
 export(removeExperiments)
 export(removeProblem)
 export(summarizeExperiments)
-import(BatchJobs)
 import(BBmisc)
-import(plyr)
+import(BatchJobs)
+import(DBI)
 import(RSQLite)
-S3method(addExperiments,ExperimentRegistry)
-S3method(applyJobFunction,ExperimentRegistry)
-S3method(copyRequiredJobFiles,ExperimentRegistry)
-S3method(dbCreateJobDefTable,ExperimentRegistry)
-S3method(dbGetJobs,ExperimentRegistry)
-S3method(getJobs,ExperimentRegistry)
-S3method(print,Algorithm)
-S3method(print,Design)
-S3method(print,ExperimentJob)
-S3method(print,ExperimentRegistry)
-S3method(print,Problem)
-S3method(setJobFunction,ExperimentRegistry)
+import(plyr)
