@@ -1,4 +1,5 @@
 #' @import BBmisc
+#' @import DBI
 #' @import RSQLite
 #' @import BatchJobs
 #' @import plyr
