@@ -1,3 +1,6 @@
+BatchExperiments_1.0-621: 
+- added missing import for R versions < 2.15.1
+
 BatchExperiments_1.0-607: 
 - reworked summarizeExperiments, the previous "details" options was basically unuseable
 - minor bug fixes
